src/components/ui/layout/Card/styles.module.css
.card {
  @apply flex flex-col bg-white relative;
  /* prettier-ignore */
  box-shadow: 0 1px 5px theme('colors.black')10;
}

.card_header {
  @apply flex items-center justify-between px-7 pt-6;
}

.card_actions {
  @apply flex items-center;
}

.card_body {
  @apply flex flex-col px-7 py-6;
}

.card_title {
  @apply flex;
}
.card_title > h4 {
  @apply font-medium text-black ;
}

.card_footer {
  @apply flex px-7 pb-6;
}

